Fix grid shifting when moving between pages with/without scroll bar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -124,8 +124,9 @@ ul {
 
 #grid {
   position: fixed;
-  min-width: 100%;
-  min-height: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
+  left: 0;
   background: linear-gradient(
       180deg,
       rgba(0, 0, 0, 0) 0px,
